six. half-work commit

--- a/frontman.html
+++ b/frontman.html
@@ -15,6 +15,9 @@
         <a href="songs&albums.html">Пісні та альбоми</a>
     </div>
 
+    <button onclick="dialog()">Інформація про розробника</button>
+    <script src="index.js"></script>
+
     <H1 class="headers"><a name="Den R.">Фронтмен</a><hr></H1>
 
     <section class="main-container">
@@ -35,6 +38,13 @@
                 <li>Електропоп</li>
             </ol>
         </div>
+        <button onclick="changeListType()">Змінити відображення списка</button>
+        <script>
+            function changeListType(){
+                let list = document.getElementsByTagName("ol")[0];
+                list.outerHTML = "<ul><label><H3 class=\"headers\">Жанри, в яких виконує</H3><hr></label><li>Алтернативний рок</li><li>Інді-рок</li><li>Поп-рок</li><li>Інді-поп</li><li>Електропоп</li></ul>"
+            }
+        </script>
     </section>
     
     <div>
