--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Artem Svystun">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Imagine Dragons - About Band</title>
     <style>
         dt > h3 {
             font-size: larger;
         }
     </style>
+
+    <script>
+        alert("Інформація на сайті взята з джерел відкритого доступу!")
+    </script>
+    <title>Imagine Dragons - About Band</title>
 </head>
 <body>
     <div class="nav">
@@ -19,6 +23,9 @@
         <a href="line-up.html">Інші учасники</a>
         <a href="songs&albums.html">Пісні та альбоми</a>
     </div>
+
+    <button onclick="dialog()">Інформація про розробника</button>
+    <script src="index.js"></script>
 
     <H1 class="headers">Про гурт<hr></H1>
     <section class="main-container">
@@ -86,6 +93,5 @@
             в цілому охоплюючи більше 160 країн світу. Освітленням шоу в ЗМІ в основному здійснюють сторонні компанії.
         </dd>
     </dl>
-    
 </body>
 </html>
