--- a/line-up.html
+++ b/line-up.html
@@ -15,6 +15,10 @@
         <a href="songs&albums.html">Пісні та альбоми</a>
     </div>
 
+    <button onclick="dialog()">Інформація про розробника</button>
+    <button onclick="changeBackColor()">Змінити фон</button>
+    <script src="index.js"></script>
+
     <H1 class="headers">Інші учасники гурту</H1>
 
     <H2 class="headers"><a name="Ben">Бен Маккі</a><hr></H2>
