--- a/index.html
+++ b/index.html
@@ -25,15 +25,20 @@
     </div>
 
     <button onclick="dialog()">Інформація про розробника</button>
+    <button onclick="getSlogan()">Слоган гурту</button>
     <script src="index.js"></script>
 
     <H1 class="headers">Про гурт<hr></H1>
+
     <section class="main-container">
         <div>
             <a href="Images/Imagine Dragons Group.jpg" target="_blank"><img src="Images/Imagine Dragons Group.jpg" alt="Гурт разом" width="640px" height="480px"></a>
         </div>
 
         <div class="content-conteiner">
+            <script>
+                document.write('<p id="slogan" style="font-size: larger;">"Let the music speak!" (c) Imagine Dragons </p>');
+            </script>
             <p>
                 Imagine Dragons — американський попрок-гурт, утворений 2008 року в Лас-Вегасі, штат Невада.
                 До складу колективу входять вокаліст <a href="frontman.html#Den R.">Ден Рейнольдс</a>,
