--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     </div>
 
     <button onclick="dialog()">Інформація про розробника</button>
-    <button onclick="getSlogan()">Слоган гурту</button>
     <script src="index.js"></script>
 
     <H1 class="headers">Про гурт<hr></H1>
@@ -37,7 +36,7 @@
 
         <div class="content-conteiner">
             <script>
-                document.write('<p id="slogan" style="font-size: larger;">"Let the music speak!" (c) Imagine Dragons </p>');
+                document.write('<p style="font-size: larger;">"Let the music speak!" (c) Imagine Dragons </p>');
             </script>
             <p>
                 Imagine Dragons — американський попрок-гурт, утворений 2008 року в Лас-Вегасі, штат Невада.
