--- a/songs&albums.html
+++ b/songs&albums.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Artem Svystun">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="index.js"></script>
     <title>Imagine Dragons - Songs</title>
 </head>
 <body>
@@ -131,21 +132,15 @@
             <tr><td>8.</td><td class="name">Kid</td>                <td>2:39</td>    <td align="right">10 693 748</td></tr>
             <tr><td>9.</td><td class="name">Fire In These Hills</td><td>3:39</td>    <td align="right">13 119 017</td></tr>
         </tbody>
-        
-        <div class="nav" style="margin-top: 10px;">
-            <button onclick="tableRowRemove()">Видалити останню пісню</button>
-            <button onclick="prependSavedRow()">На перше місце</button>
-            <button onclick="replaceInconsistancy()">Повернути</button>
-            <button onclick="replaceFirstANDLast()">Перемістити Перший і останній</button>
-        </div>
     </table>
     
-    <button onclick="CompareNameLengths()" style="margin-top: 10px;">Порівняти</button>
-    <div class="nav">
-        <button onclick="AppendAlbum()">Додати альбом</button>
-        <button onclick="AppendSong()">Додати пісню</button>
+    <div class="nav" style="margin-top: 10px;">
+        <button onclick="tableRowRemove()">Видалити останню пісню</button>
+        <button onclick="prependSavedRow()">На перше місце</button>
+        <button onclick="replaceInconsistancy()">Повернути</button>
+        <button onclick="replaceFirstANDLast()">Перемістити перший і останній</button>
     </div>
-
-    <script src="index.js"></script>
+    <button onclick="CompareNameLengths()" style="margin-top: 10px;">Порівняти</button>
+    <button onclick="AppendAlbum()">Додати альбом</button>
 </body>
 </html>
