--- a/frontman.html
+++ b/frontman.html
@@ -66,9 +66,9 @@
         <script>
             const songList = document.getElementById('song-list');
             const newSong = document.createElement('li');
-            
-            secondNewSong.textContent = '"Abyss" - Yungblud';
-            songList.lastChild.after(newSong);
+
+            newSong.textContent = '"Abyss" - Yungblud';
+            songList.lastElementChild.after(newSong);
         </script>
 
         <iframe name="Playout" scrolling="auto" frameborder="0"></iframe> 
