--- a/frontman.html
+++ b/frontman.html
@@ -15,7 +15,7 @@
         <a href="songs&albums.html">Пісні та альбоми</a>
     </div>
 
-    <button onclick="dialog()">Інформація про розробника</button>
+    <button id="dialogButton">Інформація про розробника</button>
     <script src="index.js"></script>
 
     <H1 class="headers"><a name="Den R.">Фронтмен</a><hr></H1>
@@ -69,6 +69,14 @@
 
             newSong.textContent = '"Abyss" - Yungblud';
             songList.lastElementChild.after(newSong);
+
+            songList.onclick = function(){
+                const clicked = event.target.closest("li");
+                clicked.style.background = 'aquamarine';
+                clicked.style.color = 'black';
+                setTimeout(() => clicked.style.background = '', 200);
+                setTimeout(() => clicked.style.color = '', 200);
+            }
         </script>
 
         <iframe name="Playout" scrolling="auto" frameborder="0"></iframe> 
