--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Artem Svystun">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <style>
-        dt > h3 {
-            font-size: larger;
-        }
-    </style>
-
     <script>
         alert("Інформація на сайті взята з джерел відкритого доступу!")
     </script>
@@ -24,11 +18,10 @@
         <a href="songs&albums.html">Пісні та альбоми</a>
     </div>
 
-    <button onclick="dialog()">Інформація про розробника</button>
+    <button id="dialogButton">Інформація про розробника</button>
     <script src="index.js"></script>
 
     <H1 class="headers">Про гурт<hr></H1>
-
     <section class="main-container">
         <div>
             <a href="Images/Imagine Dragons Group.jpg" target="_blank"><img src="Images/Imagine Dragons Group.jpg" alt="Гурт разом" width="640px" height="480px"></a>
