--- a/frontman.html
+++ b/frontman.html
@@ -29,7 +29,7 @@
                 рок-гурту «Imagine Dragons».
             </p>
         
-            <ol type="I">
+            <ol type="I" id="genre-list">
                 <label><H3 class="headers">Жанри, в яких виконує</H3><hr></label>
                 <li>Алтернативний рок</li>
                 <li>Інді-рок</li>
