--- a/songs&albums.html
+++ b/songs&albums.html
@@ -27,6 +27,30 @@
 
     <H1 class="headers">Пісні та альбоми<hr></H1>
 
+    <div>
+       <p>
+            Перетягни постери альбомів відповідно до року виходу   
+       </p> 
+       <div id="album-game">
+            <div>
+                <div class="year">2012</div>
+                <div class="year">2015</div>
+                <div class="year">2018</div>
+                <div class="year">2024</div>
+                <div class="place"></div>
+                <div class="place"></div>
+                <div class="place"></div>
+                <div class="place"></div>
+            </div>
+            <div id="album-pool">
+                <img src="Images/Night_Visions_Album_Cover.jpeg" alt="Night Visions Album Cover" style="height: 50px; width: 50px;">
+                <img src="Images/Imagine_Dragons_-_Smoke_+_Mirrors.png" alt="Smoke+Mirrors Album Cover" style="height: 50px; width: 50px;">
+                <img src="Images/Origins_cover.png" alt="Origins Album Cover" style="height: 50px; width: 50px;">
+                <img src="Images/Imagine_Dragons_-_Loom.png" alt="Loom Album Cover" style="height: 50px; width: 50px;">
+            </div>
+       </div>
+    </div>
+
     <table id="albums-table">
         <caption><h2 class="headers">Albums</h2></caption>
         <thead data-toggle-id="albums-metadata"><tr><td><b>Night Visions</b></td><td><b>Smoke+Mirrors</b></td><td><b>Origins</b></td><td><b>Loom</b></td></tr></thead>
