--- a/songs&albums.html
+++ b/songs&albums.html
@@ -8,48 +8,14 @@
     <title>Imagine Dragons - Songs</title>
 </head>
 <body>
-    <div class="nav">
+    <div class="nav" id="nav">
         <a href="index.html">Про гурт</a>
         <a href="frontman.html">Фронтмен</a>
         <a href="line-up.html">Інші учасники</a>
         <a href="songs&albums.html">Пісні та альбоми</a>
     </div>
 
-    <button id="dialogButton">Інформація про розробника</button>
-    <button id="quiz">Опитування</button>
-    <script>
-        document.getElementById("quiz").onclick = function (){
-            if(confirm("Любите Imagine Dragons?")){
-                prompt("Скільки приблизно їх пісень на тиждень ви прослуховуєте?", "")
-            }
-        }
-    </script>
-
     <H1 class="headers">Пісні та альбоми<hr></H1>
-
-    <div>
-       <p>
-            Перетягни постери альбомів відповідно до року виходу   
-       </p> 
-       <div id="album-game">
-            <div>
-                <div class="year">2012</div>
-                <div class="year">2015</div>
-                <div class="year">2018</div>
-                <div class="year">2024</div>
-                <div class="place"></div>
-                <div class="place"></div>
-                <div class="place"></div>
-                <div class="place"></div>
-            </div>
-            <div id="album-pool">
-                <img src="Images/Night_Visions_Album_Cover.jpeg" alt="Night Visions Album Cover" style="height: 50px; width: 50px;">
-                <img src="Images/Imagine_Dragons_-_Smoke_+_Mirrors.png" alt="Smoke+Mirrors Album Cover" style="height: 50px; width: 50px;">
-                <img src="Images/Origins_cover.png" alt="Origins Album Cover" style="height: 50px; width: 50px;">
-                <img src="Images/Imagine_Dragons_-_Loom.png" alt="Loom Album Cover" style="height: 50px; width: 50px;">
-            </div>
-       </div>
-    </div>
 
     <table id="albums-table">
         <caption><h2 class="headers">Albums</h2></caption>
@@ -159,10 +125,7 @@
     </table>
     
     <div id="tableOperationsMenu" style="margin-top: 10px;">
-        <button data-action="remove">Видалити останню пісню</button>
-        <button data-action="prepend">На перше місце</button>
-        <button data-action="returnToStart">Повернути</button>
-        <button data-action="replace">Перемістити перший і останній</button>
+
     </div>
     <script src="menu.js"></script>
 
