--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Artem Svystun">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script>
-        alert("Інформація на сайті взята з джерел відкритого доступу!")
-    </script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="navigation-bar.js"></script>
     <title>Imagine Dragons - About Band</title>
 </head>
 <body>
-    <div class="nav">
+    <header class="credentials">
+        <p><a href="https://shop.imaginedragonsmusic.com/">Imagine Dragons store website</a></p>
+        <a href="https://github.com/Haivop/web-proj---ID-group"><i class="fa fa-github" id="github-icon"></i></a>
+        <i class="fa fa-bars" id="bars-icon"></i>
+    </header>
+    <div class="nav" id="nav">
         <a href="index.html">Про гурт</a>
         <a href="frontman.html">Фронтмен</a>
         <a href="line-up.html">Інші учасники</a>
         <a href="songs&albums.html">Пісні та альбоми</a>
     </div>
-
-    <button id="dialogButton">Інформація про розробника</button>
-    <script src="index.js"></script>
 
     <H1 class="headers">Про гурт<hr></H1>
     <section class="main-container">
